add contet and styling to header

--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -26,7 +26,7 @@ $gold: #AE996A;
 }
 
 .essentials-resources {
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   color: $gold;
