--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,5 @@
 
 @import 'components/header';
 @import 'components/form-about';
-@@import 'components/buttons';
+@import 'components/buttons';
+@import 'components/amenities';
