add images and basic styling to image section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,4 @@
 @import 'components/form-about';
 @import 'components/buttons';
 @import 'components/amenities';
+@@import 'components/image-block';
