--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,5 @@
 @import 'components/form-about';
 @import 'components/buttons';
 @import 'components/amenities';
-@@import 'components/image-block';
+@import 'components/image-block';
+@import 'components/pricing';
