run and watch css compiled

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -19,7 +19,7 @@ $gold: #AE996A;
       font-style: italic;
     }
     h4 {
-      color: $color;
+      color: $coral;
       font-weight: bold;
       align-self: center;
     }
