--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,7 @@
 $primary-font: 'Open Sans', sans-serif;
 $secondary-font: 'Arimo', sans-serif;
 
-h1,h2,h3,h4,h5,h6,p,ul,li {
+* {
   font-family: $primary-font;
 }
 p {
