--- a/sass/components/_form-about.scss
+++ b/sass/components/_form-about.scss
@@ -6,7 +6,7 @@ $beige: #FCF7F7;
 $hotpink: #e24e42;
 
 .form-about {
-  background-image: url('./img/building.jpg');
+  background-image: url('./../img/building.jpg');
   background-color: $turquoise 40%;
   display: flex;
 }
