moves variables into variables file

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,3 @@
-$white: #fff7f2;
-$coral: #e24e42;
-$gold: #AE996A;
-
 .header {
   display: flex;
   flex-direction: column;
@@ -21,7 +17,7 @@ $gold: #AE996A;
       font-style: italic;
     }
     h4 {
-      color: $coral;
+      color: $hotpink;
       font-weight: bold;
       align-self: center;
     }
