--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 $primary-font: 'Open Sans', sans-serif;
-$secondary-font: 'Arimo', sans-serif;
+$secondary-font: 'Leckerli One', cursive;
 
 $gold: #AE996A;
 $lightgrey: #D8D8D8;
