--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,16 +1,2 @@
-// <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-* {
-  font-family: $primary-font;
-}
-p {
-  font-size: 12pt;
-}
-h5 {
-  font-size: 1.2em;
-}
-h4 {
-  font-size: 1.3em;
-}
-h2 {
-  font-size: 2.2em;
-}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Leckerli+One);
