--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,19 +6,19 @@ body,html {
   margin: 0;
 }
 p {
-  font-size: 12pt;
+  font-size: 10pt;
 }
 h5 {
-  font-size: 1.2em;
+  font-size: 1.8em;
 }
 h4 {
-  font-size: 1.3em;
+  font-size: 2.1em;
 }
 h2 {
-  font-size: 2.2em;
+  font-size: 2.5em;
 }
 h1 {
-  font-size: 3em;
+  font-size: 4.5em;;
   font-family: $secondary-font;
 }
 img {
