--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,9 +4,13 @@ $secondary-font: 'Leckerli One', cursive;
 $gold: #AE996A;
 $lightgrey: #D8D8D8;
 $turquoise: #008F95;
-$orange: #E98000;
+$turquoise-shear: rgba(0,143,149,.5);
+$orange: rgb(233,128,0);
+$orange-shear: rgba(233,128,0,.9);
 $white: #fff7f2;
 $darkgrey: #363536;
 $beige: #FCF7F7;
+$beige-shear: rgba(252,247,247,.5);
 $hotpink: #e24e42;
+$hotpink-shear: rgba(226,78,66,.9);
 $coolpink: #EB6E80;
