--- a/sass/components/_form-about.scss
+++ b/sass/components/_form-about.scss
@@ -1,24 +1,38 @@
 .form-about {
   background-image: url('./../img/building.jpg');
-  background-color: $turquoise 40%;
+  background-size: cover;
+  background-color: $turquoise-shear;
   display: flex;
+  flex-direction: column;
 }
 .form-container {
-  background-color: $orange 40%;
+  background-color: $orange-shear;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 40px;
+  padding: 10px;
   color: $darkgrey;
     input {
-      background-color: $beige 60%;
+      background-color: $beige-shear;
     }
     button {
       align-self: flex-end;
-      background-color: $hotpink 80%;
+      background-color: $hotpink;
     }
 }
+
 .about {
-  background-color: $hotpink 40%;
+  display: flex;
+  background-color: $hotpink-shear;
   color: $white;
   align-items: center;
+  padding: 10px;
+  margin: 20px;
+    p {
+      font-size: .7em;
+    }
+    br {
+      line-height: 2em;
+    }
 }
