positioning of image blocks

--- a/sass/components/_amenities.scss
+++ b/sass/components/_amenities.scss
@@ -2,7 +2,11 @@
   display: flex;
   align-items: center;
   text-align: center;
-
+}
+.free-trial {
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
 .amenities {
