--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,11 @@ img {
   align-items: center;
   text-align: center; }
 
+.free-trial {
+  display: flex;
+  align-items: center;
+  text-align: center; }
+
 .amenities {
   color: #AE996A;
   font-weight: bold;
@@ -127,19 +132,23 @@ img {
   font-size: 1.1em; }
 
 .image-display {
-  background-image: url(".img/meeting-area-small.png");
+  background-image: url("./../img/circle-small.jpeg");
+  background-size: cover;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  padding: 60px 0 60px 0; }
 
 .worker {
   border: 2px solid #EB6E80;
-  max-width: 110px; }
+  max-width: 110px;
+  margin-bottom: 40px; }
 
 .coffee {
   border: 2px solid #e98000;
-  max-width: 87px; }
+  max-width: 87px;
+  margin-bottom: 40px; }
 
 .lounge {
   border: 2px solid #e24e42;
