small mobile styling changes

--- a/sass/components/_form-about.scss
+++ b/sass/components/_form-about.scss
@@ -15,6 +15,7 @@
   color: $darkgrey;
     input {
       background-color: $beige-shear;
+      width: 100%;
     }
     button {
       align-self: flex-end;
