--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,8 @@ img {
   padding: 10px;
   color: #363536; }
   .form-container input {
-    background-color: rgba(252, 247, 247, 0.5); }
+    background-color: rgba(252, 247, 247, 0.5);
+    width: 100%; }
   .form-container button {
     align-self: flex-end;
     background-color: #e24e42; }
