center free trial button

--- a/css/main.css
+++ b/css/main.css
@@ -112,12 +112,8 @@ img {
 .col-align {
   display: flex;
   align-items: center;
-  text-align: center; }
-
-.free-trial {
-  display: flex;
-  align-items: center;
-  text-align: center; }
+  text-align: center;
+  justify-content: center; }
 
 .amenities {
   color: #AE996A;
