--- a/sass/components/_amenities.scss
+++ b/sass/components/_amenities.scss
@@ -2,12 +2,9 @@
   display: flex;
   align-items: center;
   text-align: center;
+  justify-content: center;
 }
-.free-trial {
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
+
 
 .amenities {
   color: $gold;
