--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,9 @@ img {
   text-align: center;
   justify-content: center; }
 
+.free-trial {
+  margin: 30px 0 30px 0; }
+
 .amenities {
   color: #AE996A;
   font-weight: bold;
