--- a/sass/components/_image-block.scss
+++ b/sass/components/_image-block.scss
@@ -11,13 +11,16 @@
   border: 5px solid $coolpink;
   max-width: 275px;
   margin-bottom: 40px;
+  box-shadow: 2px 3px 3px 2px $darkgrey;
 }
 .coffee {
   border: 5px solid $orange;
   max-width: 200px;
   margin-bottom: 40px;
+  box-shadow: 2px 3px 3px 2px $darkgrey;
 }
 .lounge {
   border: 5px solid $hotpink;
   max-width: 400px;
+  box-shadow: 2px 3px 3px 2px $darkgrey;
 }
