--- a/sass/components/_amenities.scss
+++ b/sass/components/_amenities.scss
@@ -6,6 +6,16 @@
 }
 .free-trial {
   margin: 30px 0 30px 0;
+    button {
+      align-self: flex-end;
+      background-color: $lightgrey;
+      font-size: 1.1em;
+      box-shadow: 1px 1px 1px 1px $darkgrey;
+      transition: all 300ms linear;
+      &:hover {
+        box-shadow: 3px 4px 3px 2px $darkgrey;
+      }
+    }
 }
 
 .amenities {
