--- a/sass/components/_form-about.scss
+++ b/sass/components/_form-about.scss
@@ -10,28 +10,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 40px;
+  margin: 100px;
   padding: 10px;
   color: $darkgrey;
     input {
       background-color: $beige-shear;
       width: 100%;
+      margin-bottom: 12px;
     }
     button {
       align-self: flex-end;
       background-color: $hotpink;
+      font-size: 1.1em;
+      box-shadow: 1px 1px 1px 1px $darkgrey;
+      transition: all 300ms linear;
+      &:hover {
+        box-shadow: 3px 4px 3px 2px $darkgrey;
+      }
     }
 }
-
+.form {
+  padding: 20px;
+  min-width: 70%;
+}
 .about {
   display: flex;
   background-color: $hotpink-shear;
   color: $white;
   align-items: center;
-  padding: 10px;
-  margin: 20px;
+  padding: 20px;
+  margin: 30px;
     p {
-      font-size: .7em;
+      font-size: .9em;
     }
     br {
       line-height: 2em;
