--- a/css/main.css
+++ b/css/main.css
@@ -157,23 +157,25 @@ img {
   flex-direction: column;
   align-items: center;
   padding: 60px 0 60px 0; }
+  .image-display img {
+    transition: all 300ms linear;
+    box-shadow: 2px 3px 3px 2px #363536; }
+    .image-display img:hover {
+      box-shadow: 3px 5px 5px 3px #363536; }
 
 .worker {
   border: 5px solid #EB6E80;
   max-width: 275px;
-  margin-bottom: 40px;
-  box-shadow: 2px 3px 3px 2px #363536; }
+  margin-bottom: 40px; }
 
 .coffee {
   border: 5px solid #e98000;
   max-width: 200px;
-  margin-bottom: 40px;
-  box-shadow: 2px 3px 3px 2px #363536; }
+  margin-bottom: 40px; }
 
 .lounge {
   border: 5px solid #e24e42;
-  max-width: 400px;
-  box-shadow: 2px 3px 3px 2px #363536; }
+  max-width: 400px; }
 
 .pricing {
   background-image: url("./../img/folks.jpeg");
@@ -189,6 +191,7 @@ img {
   justify-content: center;
   align-items: center;
   text-align: center;
+  min-width: 60%;
   margin: 70px 150px 70px 150px; }
   .pricing-specs h3 {
     font-size: 1.9em; }
