--- a/sass/components/_pricing.scss
+++ b/sass/components/_pricing.scss
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  min-width: 60%;
   margin: 70px 150px 70px 150px;
     h3 {
       font-size: 1.9em;
