--- a/css/main.css
+++ b/css/main.css
@@ -60,8 +60,23 @@ img {
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  padding: 0 80px 0 80px;
+  padding: 0 80px;
   color: #AE996A; }
+  @media only screen and (min-width: 600px) {
+    .essentials-resources {
+      flex-direction: row;
+      justify-content: space-around; } }
+  @media only screen and (min-width: 900px) {
+    .essentials-resources {
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 0 40px; } }
+
+.essentials {
+  margin-right: 50px; }
+  @media only screen and (max-width: 600px) {
+    .essentials {
+      margin-right: 0; } }
 
 .bigger {
   font-size: 1.4em;
